# AgentOps

./: .env.example  .gitignore  .vercelignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  otel-collector-config.yaml  railway.toml  render.yaml  vercel.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  integration-tests.yml  release.yml  security.yml
api/: Dockerfile  fly.toml  go.mod  go.sum  main.go
api/internal/config/: config.go
api/internal/database/: ab_models.go  ai_models.go  models.go  redteam_models.go
api/internal/handlers/: ab_handlers.go  ai_handlers.go  alert_handlers.go  alert_rule_handlers.go  audit_handlers.go  auth_handlers.go  blast_radius_handlers.go  chaos_handlers.go  cost_handlers.go  eval_handlers.go  flame_handlers.go  genome_handlers.go  handlers.go  ingest_handlers.go  live_stats_handlers.go  nlq_handlers.go  oauth_handlers.go  prompt_handlers.go  redteam_handlers.go  search_handlers.go  security_handlers.go  seed_handler.go  (+3 more)
dashboard/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
k8s/: deployment.yaml
scripts/: seed.go  setup-github.sh  start.sh
sdk/: go.mod  go.sum  instrumentation.go  tracer.go
sdk-python/: example_agent.py  live_ingest.py  pyproject.toml
sdk-python/agentops_sdk/: __init__.py  client.py  decorators.py  patches.py
sdk-python/agentops_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/example/: main.go
(+81 files in other folders)
