[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-sdk"
version = "0.1.0"
description = "AgentOps Python SDK — instrument AI agents with one line"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
openai     = ["openai>=1.0"]
anthropic  = ["anthropic>=0.20"]
all        = ["openai>=1.0", "anthropic>=0.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentops_sdk*"]
